fix(hero): lower z-index of slider controls

--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -339,7 +339,7 @@
 }
 
 .slider__control {
-  z-index: 100;
+  z-index: 40;
   position: absolute;
   left: 50px;
   top: 50%;
